--- a/Lab1/intex.html
+++ b/Lab1/intex.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shubham short bio</title>
+        <title>Tushit saini short bio</title>
     </head>
     <body>
-        <h1>Shubham</h1>
-        <p>HI, I am Shubham. I am studying B.tech CSE (AI&ML) at K.R.Mangalam university,Gurgaon.I have learned some coding language like python,java,C++ and more also I enjoyed some web development.</p>
+        <h1>Tushit saini</h1>
+        <p>HI, I am Tushit saini. I am studying B.tech CSE (AI&ML) at K.R.Mangalam university,Gurgaon.I have learned some coding language like python,java,C++ and more also I enjoyed some web development.</p>
 
 
         <hr>
@@ -13,4 +13,5 @@
         <h2>My intrest</h2>
         <p>I am intrested in learning programing languages and web technologies. The coding languages I have learned are HTML,CSS and JavaScript.</p>
     </body>
+
 </html>
